grammars/moonpkg/test/corpus/apply.txt
================================================================================
Basic apply
================================================================================

options("is-main": true)

--------------------------------------------------------------------------------

(source_file
  (apply_statement
    name: (identifier)
    (argument_list
      (argument
        label: (string)
        value: (true)))))

================================================================================
Apply with identifier labels
================================================================================

config(enabled: true, count: 42)

--------------------------------------------------------------------------------

(source_file
  (apply_statement
    name: (identifier)
    (argument_list
      (argument
        label: (identifier)
        value: (true))
      (argument
        label: (identifier)
        value: (integer)))))

================================================================================
Apply with mixed labels
================================================================================

options("is-main": true, link: { "native": true })

--------------------------------------------------------------------------------

(source_file
  (apply_statement
    name: (identifier)
    (argument_list
      (argument
        label: (string)
        value: (true))
      (argument
        label: (identifier)
        value: (object
          (object_entry
            key: (string)
            value: (true)))))))

================================================================================
Apply with array value
================================================================================

invalid2(
  off: ["fragile_match"],
  on: ["all"],
  as_error: ["deprecated_syntax"]
)

--------------------------------------------------------------------------------

(source_file
  (apply_statement
    name: (identifier)
    (argument_list
      (argument
        label: (identifier)
        value: (array
          (string)))
      (argument
        label: (identifier)
        value: (array
          (string)))
      (argument
        label: (identifier)
        value: (array
          (string))))))

================================================================================
Apply with nested object
================================================================================

options(
  "supported-backends": {
    "file1.mbt": ["js", "wasm-gc"],
    "file2.mbt": ["native"]
  }
)

--------------------------------------------------------------------------------

(source_file
  (apply_statement
    name: (identifier)
    (argument_list
      (argument
        label: (string)
        value: (object
          (object_entry
            key: (string)
            value: (array
              (string)
              (string)))
          (object_entry
            key: (string)
            value: (array
              (string))))))))

================================================================================
Apply with trailing comma
================================================================================

options(
  value: 123,
)

--------------------------------------------------------------------------------

(source_file
  (apply_statement
    name: (identifier)
    (argument_list
      (argument
        label: (identifier)
        value: (integer)))))
