grammars/moonpkg/test/corpus/assignments.txt
================================================================================
String assignment
================================================================================

warnings = "+unused_value-deprecated"

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (string)))

================================================================================
Boolean assignment true
================================================================================

is_main = true

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (true)))

================================================================================
Boolean assignment false
================================================================================

enabled = false

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (false)))

================================================================================
Integer assignment
================================================================================

value = 123

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (integer)))

================================================================================
Array assignment
================================================================================

backends = ["js", "wasm", "native"]

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (array
      (string)
      (string)
      (string))))

================================================================================
Object assignment
================================================================================

config = { "key": "value" }

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (object
      (object_entry
        key: (string)
        value: (string)))))

================================================================================
Hyphenated identifier
================================================================================

warn-list = "+all"

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (string)))
