grammars/moonpkg/test/corpus/comments.txt
================================================================================
Line comment
================================================================================

// This is a comment
warnings = "+all"

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (assign_statement
    name: (identifier)
    value: (string)))

================================================================================
Block comment
================================================================================

/* This is a block comment */
warnings = "+all"

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (assign_statement
    name: (identifier)
    value: (string)))

================================================================================
Inline comment
================================================================================

warnings = "+all" // inline comment

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (string))
  (line_comment))

================================================================================
Multi-line block comment
================================================================================

/*
 * This is a
 * multi-line comment
 */
enabled = true

--------------------------------------------------------------------------------

(source_file
  (block_comment)
  (assign_statement
    name: (identifier)
    value: (true)))
