grammars/moonpkg/test/corpus/expressions.txt
================================================================================
Empty array
================================================================================

values = []

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (array)))

================================================================================
Array with trailing comma
================================================================================

values = ["a", "b",]

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (array
      (string)
      (string))))

================================================================================
Empty object
================================================================================

config = {}

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (object)))

================================================================================
Object with identifier keys
================================================================================

config = { enabled: true, count: 42 }

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (object
      (object_entry
        key: (identifier)
        value: (true))
      (object_entry
        key: (identifier)
        value: (integer)))))

================================================================================
Nested arrays
================================================================================

matrix = [["a", "b"], ["c", "d"]]

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (array
      (array
        (string)
        (string))
      (array
        (string)
        (string)))))

================================================================================
Nested objects
================================================================================

deep = { "a": { "b": { "c": true } } }

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (object
      (object_entry
        key: (string)
        value: (object
          (object_entry
            key: (string)
            value: (object
              (object_entry
                key: (string)
                value: (true)))))))))

================================================================================
String with escape sequences
================================================================================

path = "hello\\nworld"

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (string)))

================================================================================
Mixed types in array
================================================================================

mixed = ["string", 123, true, false]

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (array
      (string)
      (integer)
      (true)
      (false))))
