grammars/moonpkg/test/corpus/imports.txt
================================================================================
Basic import
================================================================================

import { "path/to/pkg" }

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_list
      (import_item
        path: (string)))))

================================================================================
Import with alias
================================================================================

import { "path/to/pkg" as @alias }

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_list
      (import_item
        path: (string)
        alias: (package_name)))))

================================================================================
Multiple imports
================================================================================

import { "path/to/pkg1", "path/to/pkg2" as @alias }

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_list
      (import_item
        path: (string))
      (import_item
        path: (string)
        alias: (package_name)))))

================================================================================
Import for test
================================================================================

import { "pkg" } for "test"

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_list
      (import_item
        path: (string)))
    (import_for_clause
      kind: (string))))

================================================================================
Import for wbtest
================================================================================

import { "pkg" } for "wbtest"

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_list
      (import_item
        path: (string)))
    (import_for_clause
      kind: (string))))

================================================================================
Legacy import test
================================================================================

import "test" { "pkg" }

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_kind
      kind: (string))
    (import_list
      (import_item
        path: (string)))))

================================================================================
Legacy import wbtest
================================================================================

import "wbtest" { "a/pkg", "b/pkg" }

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_kind
      kind: (string))
    (import_list
      (import_item
        path: (string))
      (import_item
        path: (string)))))

================================================================================
Import with trailing comma
================================================================================

import { 
  "path/to/pkg1", 
  "path/to/pkg2",
}

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_list
      (import_item
        path: (string))
      (import_item
        path: (string)))))
