grammars/moonpkg/test/corpus/mixed.txt
================================================================================
Multiple statements
================================================================================

import { "path/to/pkg1", "path/to/pkg2" as @alias }
warnings = "+all"
options("is-main": true)

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_list
      (import_item
        path: (string))
      (import_item
        path: (string)
        alias: (package_name))))
  (assign_statement
    name: (identifier)
    value: (string))
  (apply_statement
    name: (identifier)
    (argument_list
      (argument
        label: (string)
        value: (true)))))

================================================================================
Statements with semicolons
================================================================================

warnings = "+all";
enabled = true;

--------------------------------------------------------------------------------

(source_file
  (assign_statement
    name: (identifier)
    value: (string))
  (assign_statement
    name: (identifier)
    value: (true)))

================================================================================
Complex real-world example
================================================================================

import { "path/to/pkg1", "path/to/pkg2" as @alias }

import { 
  "path/to/pkg1", 
} for "test"

options(
  "is-main": true,
  "supported-backends": {
    "file1.mbt": ["js", "wasm-gc"],
    "file2.mbt": ["native"],
  },
  formatter: {
    "ignore": [
      "file1.mbt",
      "file2.mbt",
    ]
  }
)

--------------------------------------------------------------------------------

(source_file
  (import_statement
    (import_list
      (import_item
        path: (string))
      (import_item
        path: (string)
        alias: (package_name))))
  (import_statement
    (import_list
      (import_item
        path: (string)))
    (import_for_clause
      kind: (string)))
  (apply_statement
    name: (identifier)
    (argument_list
      (argument
        label: (string)
        value: (true))
      (argument
        label: (string)
        value: (object
          (object_entry
            key: (string)
            value: (array
              (string)
              (string)))
          (object_entry
            key: (string)
            value: (array
              (string)))))
      (argument
        label: (identifier)
        value: (object
          (object_entry
            key: (string)
            value: (array
              (string)
              (string))))))))
